--- a/conf/php5/fpm/php.ini
+++ b/conf/php5/fpm/php.ini
@@ -1939,6 +1939,12 @@ opcache.fast_shutdown=1
 ; absolute path.
 ;curl.cainfo =
 
+[xdebug]
+; http://xdebug.org/docs/all_settings
+xdebug.remote_connect_back=1
+xdebug.remote_enable=1
+xdebug.profiler_enable_trigger=1
+
 ; Local Variables:
 ; tab-width: 4
 ; End:
