increase nginx client_max_body_size  to 64M to match php config

--- a/conf/nginx/nginx.conf
+++ b/conf/nginx/nginx.conf
@@ -26,6 +26,8 @@ http {
     include /etc/nginx/mime.types;
     default_type application/octet-stream;
 
+    client_max_body_size 64M;
+
     ##
     # Logging Settings
     ##
