configure zend.assertions, add prod/dev php.ini files, add package installed php.ini files for reference

--- a/conf/php/cli/php.dev.ini
+++ b/conf/php/cli/php.dev.ini
@@ -1015,6 +1015,7 @@ smtp_port = 25
 ; For Unix only.  You may supply arguments as well (default: "sendmail -t -i").
 ; http://php.net/sendmail-path
 ;sendmail_path =
+sendmail_path = "/usr/sbin/ssmtp -t"
 
 ; Force the addition of the specified parameters to be passed as extra parameters
 ; to the sendmail binary. These parameters will always replace the value of
@@ -1526,7 +1527,7 @@ url_rewriter.tags = "a=href,area=href,frame=src,input=src,form=fakeentry"
 ; Development Value: 1
 ; Production Value: -1
 ; http://php.net/zend.assertions
-zend.assertions = -1
+zend.assertions = 1
 
 ; Assert(expr); active by default.
 ; http://php.net/assert.active
