clean up, backup modified configuration files

--- a/conf/php5/fpm/php.ini
+++ b/conf/php5/fpm/php.ini
@@ -375,7 +375,8 @@ zend.enable_gc = On
 ; threat in any way, but it makes it possible to determine whether you use PHP
 ; on your server or not.
 ; http://php.net/expose-php
-expose_php = On
+;expose_php = On
+expose_php = Off
 
 ;;;;;;;;;;;;;;;;;;;
 ; Resource Limits ;
@@ -384,6 +385,7 @@ expose_php = On
 ; Maximum execution time of each script, in seconds
 ; http://php.net/max-execution-time
 ; Note: This directive is hardcoded to 0 for the CLI SAPI
+;max_execution_time = 30
 max_execution_time = 120
 
 ; Maximum amount of time each script may spend parsing request data. It's a good
@@ -405,6 +407,7 @@ max_input_time = 60
 
 ; Maximum amount of memory a script may consume (128MB)
 ; http://php.net/memory-limit
+;memory_limit = 128M
 memory_limit = 256M
 
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
@@ -673,7 +676,7 @@ auto_globals_jit = On
 ; Its value may be 0 to disable the limit. It is ignored if POST data reading
 ; is disabled through enable_post_data_reading.
 ; http://php.net/post-max-size
-post_max_size = 8M
+;post_max_size = 8M
 post_max_size = 64M
 
 ; Automatically add files before PHP document.
@@ -769,6 +772,7 @@ enable_dl = Off
 ; of zero causes PHP to behave as before.  Default is 1.  You should fix your scripts
 ; to use SCRIPT_FILENAME rather than PATH_TRANSLATED.
 ; http://php.net/cgi.fix-pathinfo
+;cgi.fix_pathinfo=1
 cgi.fix_pathinfo=0
 
 ; FastCGI under IIS (on WINNT based OS) supports the ability to impersonate
@@ -881,6 +885,7 @@ cli_server.color = On
 [Date]
 ; Defines the default timezone used by the date functions
 ; http://php.net/date.timezone
+;date.timezone =
 date.timezone = UTC
 
 ; http://php.net/date.default-latitude
@@ -1939,12 +1944,6 @@ opcache.fast_shutdown=1
 ; A default value for the CURLOPT_CAINFO option. This is required to be an
 ; absolute path.
 ;curl.cainfo =
-
-[xdebug]
-; http://xdebug.org/docs/all_settings
-xdebug.remote_connect_back=1
-xdebug.remote_enable=1
-xdebug.profiler_enable_trigger=1
 
 ; Local Variables:
 ; tab-width: 4
