--- a/conf/php5/cli/php.ini
+++ b/conf/php5/cli/php.ini
@@ -401,6 +401,7 @@ max_input_time = 60
 
 ; How many GET/POST/COOKIE input variables may be accepted
 ; max_input_vars = 1000
+max_input_vars = 2000
 
 ; Maximum amount of memory a script may consume (128MB)
 ; http://php.net/memory-limit
