--- a/conf/php/cli/php.ini
+++ b/conf/php/cli/php.ini
@@ -572,7 +572,7 @@ html_errors = On
 ; http://php.net/error-log
 ; Example:
 ;error_log = php_errors.log
-error_log = /var/log/php5-cli.log
+error_log = /var/log/php-cli.log
 ; Log errors to syslog (Event Log on Windows).
 ;error_log = syslog
 
@@ -681,6 +681,7 @@ default_mimetype = "text/html"
 ; PHP's default character set is set to empty.
 ; http://php.net/default-charset
 ;default_charset = "UTF-8"
+default_charset = "UTF-8"
 
 ; Always populate the $HTTP_RAW_POST_DATA variable. PHP's default behavior is
 ; to disable this feature. If post reading is disabled through
@@ -1389,7 +1390,7 @@ session.save_handler = files
 ; where MODE is the octal representation of the mode. Note that this
 ; does not overwrite the process's umask.
 ; http://php.net/session.save-path
-;session.save_path = "/var/lib/php5/sessions"
+;session.save_path = "/var/lib/php/sessions"
 
 ; Whether to use strict session mode.
 ; Strict session mode does not accept uninitialized session ID and regenerate
