--- a/conf/nginx/nginx.conf
+++ b/conf/nginx/nginx.conf
@@ -2,6 +2,9 @@ user www-data;
 worker_processes 4;
 pid /run/nginx.pid;
 
+error_log /dev/stdout info;
+# error_log /var/log/nginx/error.log;
+
 events {
     worker_connections 768;
     # multi_accept on;
@@ -32,8 +35,8 @@ http {
     # Logging Settings
     ##
 
+    # access_log /dev/stdout;
     access_log /var/log/nginx/access.log;
-    error_log /var/log/nginx/error.log;
 
     ##
     # Gzip Settings
